add debug console commang(sent exceptions msg in queue)

--- a/src/Resources/config/error_reporting.yml
+++ b/src/Resources/config/error_reporting.yml
@@ -23,3 +23,9 @@ services:
       - [setLogger, ['@logger']]
     tags:
       - { name: monolog.logger, channel: ErrorReporting }
+
+  AdgoalCommon\ErrorReportingBundle\Command\DebugTestErrorReporting:
+    arguments:
+      - '@tactician.middleware.event.command.error'
+    tags:
+      - { name: 'console.command' }
